# RWR-Editor-Next

./: .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package.json  tsconfig.json  vite.config.ts
docs/: compatibility-contract.zh-CN.md
scripts/: extract-preview-animations.mjs  tasks.mjs
src/: App.vue  animation-rig.ts  color-picker.ts  desktop-api.ts  main.ts  rwr-model.ts  settings.ts  styles.css  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/assets/: character-preview-animations.xml
src/components/: AnimationWorkspace.vue  AppHeader.vue  CharacterPreview.vue  ColorControls.vue  DecisionDialogs.vue  EditorViewport.vue  InspectorPanel.vue  OnboardingDialog.vue  SettingsDialog.vue  ToolRail.vue
src/config/: settings.ts
src/core/: types.ts
src/core/animation/: animation-rig.ts  sample-animation.ts
src/core/camera/: camera-motion.ts
src/core/color/: color-picker.ts
src/core/model/: rwr-model.ts
src/editor/: character-preview.ts  controller.ts  file-dialog-gate.ts  focus-policy.ts  marquee-selection.ts
src/i18n/: runtime.ts
src/platform/: desktop-api.ts  external-links.ts  window-state.ts
src/styles/: components.css  index.css  industrial.css
tests/: camera-motion.test.ts  color-picker.test.ts  desktop-api.test.ts  file-dialog-gate.test.ts  focus-policy.test.ts  i18n.test.ts  marquee-selection.test.ts  rwr-model.test.ts  sample-animation.test.ts  settings.test.ts  setup.ts  ui-contract.test.ts  window-state.test.ts
