[package]
name = "rwr-editor"
version = "0.6.0"
description = "Modern offline voxel and animation editor for Running With Rifles"
authors = ["RWR Editor contributors"]
edition = "2021"

[lib]
name = "rwr_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
